src/main/java/org/example/polify/common/error/ErrorCode.java
package org.example.polify.common.error;

public enum ErrorCode {
    INTERNAL_ERROR,
    VALIDATION_FAILED,
    MALFORMED_JSON,
    TYPE_MISMATCH,
    ENDPOINT_NOT_FOUND,
    METHOD_NOT_ALLOWED,
    UNAUTHORIZED,
    FORBIDDEN,

    LOGIN_ALREADY_EXISTS,
    EMAIL_ALREADY_EXISTS,
    PHONE_ALREADY_EXISTS,
    INVALID_CREDENTIALS,

    SURVEY_NOT_FOUND,
    QUESTION_NOT_FOUND,
    ATTEMPT_NOT_FOUND,
    ATTEMPT_NOT_ALLOWED,
    ATTEMPT_VALIDATION
}
